// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`updateInputsGraphicData > should calculate correct dimensions and position 1`] = `
{
  "height": 16,
  "id": "input1",
  "width": 16,
  "wordAlignedAddress": 5,
  "x": 0,
  "y": 16,
}
`;

exports[`updateInputsGraphicData > should handle multiple inputs 1`] = `
[
  [
    "0",
    {
      "height": 16,
      "id": "input1",
      "width": 16,
      "wordAlignedAddress": 5,
      "x": 0,
      "y": 16,
    },
  ],
  [
    "1",
    {
      "height": 16,
      "id": "input2",
      "width": 16,
      "wordAlignedAddress": 6,
      "x": 0,
      "y": 32,
    },
  ],
]
`;

exports[`updateInputsGraphicData > should position inputs at correct y coordinate based on line number 1`] = `
{
  "height": 16,
  "id": "input1",
  "width": 16,
  "wordAlignedAddress": 5,
  "x": 0,
  "y": 32,
}
`;
